half-solved the img gap

--- a/styles/style.css
+++ b/styles/style.css
@@ -30,5 +30,3 @@
   font-weight: 400;
   font-style: normal;
 }
-
-.description__text {}
